# kinship

./: .gitignore  README.md
kinship-action-markets/programs/example-target/: Cargo.toml
kinship-action-markets/programs/example-target/src/: lib.rs
kinship-agent-be/: .env.example  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
kinship-agent-be/alembic/: env.py
kinship-agent-be/alembic/versions/: 001_initial_schema.py  002_fix_column_sizes.py  003_add_prompts_table.py  004_add_prompt_guidance_fields.py  005_cleanup_agent_schema.py  006_add_tool_connections.py  007_add_conversations_table.py  008_add_conversation_summary_cache.py  009_add_context_tables.py  010_add_context_roles_table.py  011_add_codes_table.py
kinship-agent-be/app/: main.py
kinship-agent-be/app/agents/: knowledge.py  orchestrator.py  supervisor.py  types.py  worker.py
kinship-agent-be/app/agents/cache/: __init__.py  base.py  graph_cache.py  manager.py  presence_cache.py  worker_cache.py
kinship-agent-be/app/agents/graph/: __init__.py  builder.py
kinship-agent-be/app/agents/mcp/: __init__.py  (+4 more)
kinship-agent-be/app/api/: agents.py  chat.py  chatmessages.py  codes.py  context.py  conversations.py  knowledge.py  oauth.py  prompts.py  roles.py  tools.py  voice.py
kinship-agent-be/app/core/: config.py  llm.py  scheduler.py
kinship-agent-be/app/db/: database.py  models.py
kinship-agent-be/app/schemas/: __init__.py  agent.py  chat.py  codes.py  context.py  roles.py  tools.py
kinship-agent-be/app/services/: __init__.py  chunker.py  cleanup.py  codes.py  context.py  conversation.py  embeddings.py  file_parser.py  generation.py  history_summarizer.py  pinecone.py  roles.py  token_counter.py  tools.py  voyage.py
kinship-agent-be/scripts/: seed_data.sql
kinship-agent-be/tests/: test_agents.py
(+476 files in other folders)
