[project]
name = "kinship-agent"
version = "0.1.0"
description = "Kinship AI Agent Backend with LangGraph, LangChain, and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.26",
    "langsmith>=0.0.87",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "sse-starlette>=1.8.2",
    "python-multipart>=0.0.6",
    "nanoid>=2.0.0",
    "tiktoken>=0.5.2",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "pinecone>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
