[package]
name = "example-target"
version = "0.1.0"
description = "Example target program invoked by passed MetaDAO proposals"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_target"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
